@@ -64,7 +64,7 @@ else
 endif
 endif
 
-HOSTCFLAGS += -DCONFIG_EXAMPLES_NETTEST_HOST=1
+HOSTCFLAGS += -DNETTEST_HOST=1
 ifeq ($(CONFIG_EXAMPLES_NETTEST_SERVER),y)
 HOSTCFLAGS += -DCONFIG_EXAMPLES_NETTEST_SERVER=1 -DCONFIG_EXAMPLES_NETTEST_CLIENTIP="$(CONFIG_EXAMPLES_NETTEST_CLIENTIP)"
 endif
