@@ -40,7 +40,7 @@
  * Included Files
  ****************************************************************************/
 
-#ifdef CONFIG_EXAMPLES_NETTEST_HOST
+#ifdef NETTEST_HOST
 #else
 # include <debug.h>
 #endif
@@ -49,7 +49,7 @@
  * Definitions
  ****************************************************************************/
 
-#ifdef CONFIG_EXAMPLES_NETTEST_HOST
+#ifdef NETTEST_HOST
    /* HTONS/L macros are unique to uIP */
 
 #  define HTONS(a)       htons(a)
