@@ -6,8 +6,26 @@
 config EXAMPLES_POLL
 	bool "Poll example"
 	default n
+	depends on !NSH_BUILTIN_APPS
 	---help---
 		Enable the poll example
 
 if EXAMPLES_POLL
+
+config EXAMPLES_POLL_NOMAC
+	bool "Use Canned MAC Address"
+	default n
+
+config EXAMPLES_POLL_IPADDR
+	hex "Target IP address"
+	default 0x0a000002
+
+config EXAMPLES_POLL_DRIPADDR
+	hex "Default Router IP address (Gateway)"
+	default 0x0a000001
+
+config EXAMPLES_POLL_NETMASK
+	hex "Network Mask"
+	default 0xffffff00
+
 endif
